--- a/client/src/components/Footer/footer.scss
+++ b/client/src/components/Footer/footer.scss
@@ -9,7 +9,7 @@ footer {
     font-weight: bold;
     color: #F6F9F8;
     background-color: #354744;
-    z-index: 1;
+    // z-index: 1;
     // border: blue solid 3px;
     // border-top: rgba(246, 249, 248, .5) solid 1px;
 
